--- a/public/stylee.css
+++ b/public/stylee.css
@@ -96,3 +96,7 @@ button:hover {
     justify-content: center;
     align-items: center;
 }
+img{
+    border-radius: 20px;
+    box-shadow:3px 3px 8px rgba(0,0,0,0.3); ;
+}
